<resources>
    <string name="app_name">Test App</string>
    <string name="settings">Settings</string>
    <string name="update_content">update content</string>
    <string name="days_to_load">Days to load</string>
    <string name="one_day">1 day</string>
    <string name="seven_days">7 days</string>
    <string name="thirty_days">30 days</string>
    <string name="fave_channels">Favorite channels</string>
    <string name="category_list">Category list</string>
    <string name="channel_list">Channel list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
